generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGNATION
    CENTER
    EOL
    ERROR
    IGNORE
    NEWLINE
    NUMBER
    SUBPAGE
    TOC

Grammar

Rule 0     S' -> document
Rule 1     document -> block
Rule 2     block -> block_code
Rule 3     block -> block_title
Rule 4     block -> block_list
Rule 5     block -> block_code block
Rule 6     block -> block_title block
Rule 7     block -> block_list block
Rule 8     block_code -> CODE LBRACKETS content RBRACKETS
Rule 9     block_list -> LIST LBRACKETS list_elements RBRACKETS
Rule 10    list_elements -> list_element
Rule 11    list_elements -> list_element list_elements
Rule 12    list_element -> BULLETPOINT content
Rule 13    block_title -> TITLE LBRACKETS content RBRACKETS
Rule 14    block_title -> TITLE param LBRACKETS content RBRACKETS
Rule 15    param -> param_bg
Rule 16    param -> param_font
Rule 17    param -> param_bg param
Rule 18    param -> param_font param
Rule 19    param_bg -> BG COLOR_HEX
Rule 20    param_font -> COLOR COLOR_HEX
Rule 21    content -> STRING

Terminals, with rules where they appear

ASSIGNATION          : 
BG                   : 19
BULLETPOINT          : 12
CENTER               : 
CODE                 : 8
COLOR                : 20
COLOR_HEX            : 19 20
EOL                  : 
ERROR                : 
IGNORE               : 
LBRACKETS            : 8 9 13 14
LIST                 : 9
NEWLINE              : 
NUMBER               : 
RBRACKETS            : 8 9 13 14
STRING               : 21
SUBPAGE              : 
TITLE                : 13 14
TOC                  : 
error                : 

Nonterminals, with rules where they appear

block                : 1 5 6 7
block_code           : 2 5
block_list           : 4 7
block_title          : 3 6
content              : 8 12 13 14
document             : 0
list_element         : 10 11
list_elements        : 9 11
param                : 14 17 18
param_bg             : 15 17
param_font           : 16 18

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . block
    (2) block -> . block_code
    (3) block -> . block_title
    (4) block -> . block_list
    (5) block -> . block_code block
    (6) block -> . block_title block
    (7) block -> . block_list block
    (8) block_code -> . CODE LBRACKETS content RBRACKETS
    (13) block_title -> . TITLE LBRACKETS content RBRACKETS
    (14) block_title -> . TITLE param LBRACKETS content RBRACKETS
    (9) block_list -> . LIST LBRACKETS list_elements RBRACKETS

    CODE            shift and go to state 6
    TITLE           shift and go to state 7
    LIST            shift and go to state 8

    document                       shift and go to state 1
    block                          shift and go to state 2
    block_code                     shift and go to state 3
    block_title                    shift and go to state 4
    block_list                     shift and go to state 5

state 1

    (0) S' -> document .



state 2

    (1) document -> block .

    $end            reduce using rule 1 (document -> block .)


state 3

    (2) block -> block_code .
    (5) block -> block_code . block
    (2) block -> . block_code
    (3) block -> . block_title
    (4) block -> . block_list
    (5) block -> . block_code block
    (6) block -> . block_title block
    (7) block -> . block_list block
    (8) block_code -> . CODE LBRACKETS content RBRACKETS
    (13) block_title -> . TITLE LBRACKETS content RBRACKETS
    (14) block_title -> . TITLE param LBRACKETS content RBRACKETS
    (9) block_list -> . LIST LBRACKETS list_elements RBRACKETS

    $end            reduce using rule 2 (block -> block_code .)
    CODE            shift and go to state 6
    TITLE           shift and go to state 7
    LIST            shift and go to state 8

    block_code                     shift and go to state 3
    block                          shift and go to state 9
    block_title                    shift and go to state 4
    block_list                     shift and go to state 5

state 4

    (3) block -> block_title .
    (6) block -> block_title . block
    (2) block -> . block_code
    (3) block -> . block_title
    (4) block -> . block_list
    (5) block -> . block_code block
    (6) block -> . block_title block
    (7) block -> . block_list block
    (8) block_code -> . CODE LBRACKETS content RBRACKETS
    (13) block_title -> . TITLE LBRACKETS content RBRACKETS
    (14) block_title -> . TITLE param LBRACKETS content RBRACKETS
    (9) block_list -> . LIST LBRACKETS list_elements RBRACKETS

    $end            reduce using rule 3 (block -> block_title .)
    CODE            shift and go to state 6
    TITLE           shift and go to state 7
    LIST            shift and go to state 8

    block_title                    shift and go to state 4
    block                          shift and go to state 10
    block_code                     shift and go to state 3
    block_list                     shift and go to state 5

state 5

    (4) block -> block_list .
    (7) block -> block_list . block
    (2) block -> . block_code
    (3) block -> . block_title
    (4) block -> . block_list
    (5) block -> . block_code block
    (6) block -> . block_title block
    (7) block -> . block_list block
    (8) block_code -> . CODE LBRACKETS content RBRACKETS
    (13) block_title -> . TITLE LBRACKETS content RBRACKETS
    (14) block_title -> . TITLE param LBRACKETS content RBRACKETS
    (9) block_list -> . LIST LBRACKETS list_elements RBRACKETS

    $end            reduce using rule 4 (block -> block_list .)
    CODE            shift and go to state 6
    TITLE           shift and go to state 7
    LIST            shift and go to state 8

    block_list                     shift and go to state 5
    block                          shift and go to state 11
    block_code                     shift and go to state 3
    block_title                    shift and go to state 4

state 6

    (8) block_code -> CODE . LBRACKETS content RBRACKETS

    LBRACKETS       shift and go to state 12


state 7

    (13) block_title -> TITLE . LBRACKETS content RBRACKETS
    (14) block_title -> TITLE . param LBRACKETS content RBRACKETS
    (15) param -> . param_bg
    (16) param -> . param_font
    (17) param -> . param_bg param
    (18) param -> . param_font param
    (19) param_bg -> . BG COLOR_HEX
    (20) param_font -> . COLOR COLOR_HEX

    LBRACKETS       shift and go to state 13
    BG              shift and go to state 17
    COLOR           shift and go to state 18

    param                          shift and go to state 14
    param_bg                       shift and go to state 15
    param_font                     shift and go to state 16

state 8

    (9) block_list -> LIST . LBRACKETS list_elements RBRACKETS

    LBRACKETS       shift and go to state 19


state 9

    (5) block -> block_code block .

    $end            reduce using rule 5 (block -> block_code block .)


state 10

    (6) block -> block_title block .

    $end            reduce using rule 6 (block -> block_title block .)


state 11

    (7) block -> block_list block .

    $end            reduce using rule 7 (block -> block_list block .)


state 12

    (8) block_code -> CODE LBRACKETS . content RBRACKETS
    (21) content -> . STRING

    STRING          shift and go to state 21

    content                        shift and go to state 20

state 13

    (13) block_title -> TITLE LBRACKETS . content RBRACKETS
    (21) content -> . STRING

    STRING          shift and go to state 21

    content                        shift and go to state 22

state 14

    (14) block_title -> TITLE param . LBRACKETS content RBRACKETS

    LBRACKETS       shift and go to state 23


state 15

    (15) param -> param_bg .
    (17) param -> param_bg . param
    (15) param -> . param_bg
    (16) param -> . param_font
    (17) param -> . param_bg param
    (18) param -> . param_font param
    (19) param_bg -> . BG COLOR_HEX
    (20) param_font -> . COLOR COLOR_HEX

    LBRACKETS       reduce using rule 15 (param -> param_bg .)
    BG              shift and go to state 17
    COLOR           shift and go to state 18

    param_bg                       shift and go to state 15
    param                          shift and go to state 24
    param_font                     shift and go to state 16

state 16

    (16) param -> param_font .
    (18) param -> param_font . param
    (15) param -> . param_bg
    (16) param -> . param_font
    (17) param -> . param_bg param
    (18) param -> . param_font param
    (19) param_bg -> . BG COLOR_HEX
    (20) param_font -> . COLOR COLOR_HEX

    LBRACKETS       reduce using rule 16 (param -> param_font .)
    BG              shift and go to state 17
    COLOR           shift and go to state 18

    param_font                     shift and go to state 16
    param                          shift and go to state 25
    param_bg                       shift and go to state 15

state 17

    (19) param_bg -> BG . COLOR_HEX

    COLOR_HEX       shift and go to state 26


state 18

    (20) param_font -> COLOR . COLOR_HEX

    COLOR_HEX       shift and go to state 27


state 19

    (9) block_list -> LIST LBRACKETS . list_elements RBRACKETS
    (10) list_elements -> . list_element
    (11) list_elements -> . list_element list_elements
    (12) list_element -> . BULLETPOINT content

    BULLETPOINT     shift and go to state 30

    list_elements                  shift and go to state 28
    list_element                   shift and go to state 29

state 20

    (8) block_code -> CODE LBRACKETS content . RBRACKETS

    RBRACKETS       shift and go to state 31


state 21

    (21) content -> STRING .

    RBRACKETS       reduce using rule 21 (content -> STRING .)
    BULLETPOINT     reduce using rule 21 (content -> STRING .)


state 22

    (13) block_title -> TITLE LBRACKETS content . RBRACKETS

    RBRACKETS       shift and go to state 32


state 23

    (14) block_title -> TITLE param LBRACKETS . content RBRACKETS
    (21) content -> . STRING

    STRING          shift and go to state 21

    content                        shift and go to state 33

state 24

    (17) param -> param_bg param .

    LBRACKETS       reduce using rule 17 (param -> param_bg param .)


state 25

    (18) param -> param_font param .

    LBRACKETS       reduce using rule 18 (param -> param_font param .)


state 26

    (19) param_bg -> BG COLOR_HEX .

    BG              reduce using rule 19 (param_bg -> BG COLOR_HEX .)
    COLOR           reduce using rule 19 (param_bg -> BG COLOR_HEX .)
    LBRACKETS       reduce using rule 19 (param_bg -> BG COLOR_HEX .)


state 27

    (20) param_font -> COLOR COLOR_HEX .

    BG              reduce using rule 20 (param_font -> COLOR COLOR_HEX .)
    COLOR           reduce using rule 20 (param_font -> COLOR COLOR_HEX .)
    LBRACKETS       reduce using rule 20 (param_font -> COLOR COLOR_HEX .)


state 28

    (9) block_list -> LIST LBRACKETS list_elements . RBRACKETS

    RBRACKETS       shift and go to state 34


state 29

    (10) list_elements -> list_element .
    (11) list_elements -> list_element . list_elements
    (10) list_elements -> . list_element
    (11) list_elements -> . list_element list_elements
    (12) list_element -> . BULLETPOINT content

    RBRACKETS       reduce using rule 10 (list_elements -> list_element .)
    BULLETPOINT     shift and go to state 30

    list_element                   shift and go to state 29
    list_elements                  shift and go to state 35

state 30

    (12) list_element -> BULLETPOINT . content
    (21) content -> . STRING

    STRING          shift and go to state 21

    content                        shift and go to state 36

state 31

    (8) block_code -> CODE LBRACKETS content RBRACKETS .

    CODE            reduce using rule 8 (block_code -> CODE LBRACKETS content RBRACKETS .)
    TITLE           reduce using rule 8 (block_code -> CODE LBRACKETS content RBRACKETS .)
    LIST            reduce using rule 8 (block_code -> CODE LBRACKETS content RBRACKETS .)
    $end            reduce using rule 8 (block_code -> CODE LBRACKETS content RBRACKETS .)


state 32

    (13) block_title -> TITLE LBRACKETS content RBRACKETS .

    CODE            reduce using rule 13 (block_title -> TITLE LBRACKETS content RBRACKETS .)
    TITLE           reduce using rule 13 (block_title -> TITLE LBRACKETS content RBRACKETS .)
    LIST            reduce using rule 13 (block_title -> TITLE LBRACKETS content RBRACKETS .)
    $end            reduce using rule 13 (block_title -> TITLE LBRACKETS content RBRACKETS .)


state 33

    (14) block_title -> TITLE param LBRACKETS content . RBRACKETS

    RBRACKETS       shift and go to state 37


state 34

    (9) block_list -> LIST LBRACKETS list_elements RBRACKETS .

    CODE            reduce using rule 9 (block_list -> LIST LBRACKETS list_elements RBRACKETS .)
    TITLE           reduce using rule 9 (block_list -> LIST LBRACKETS list_elements RBRACKETS .)
    LIST            reduce using rule 9 (block_list -> LIST LBRACKETS list_elements RBRACKETS .)
    $end            reduce using rule 9 (block_list -> LIST LBRACKETS list_elements RBRACKETS .)


state 35

    (11) list_elements -> list_element list_elements .

    RBRACKETS       reduce using rule 11 (list_elements -> list_element list_elements .)


state 36

    (12) list_element -> BULLETPOINT content .

    BULLETPOINT     reduce using rule 12 (list_element -> BULLETPOINT content .)
    RBRACKETS       reduce using rule 12 (list_element -> BULLETPOINT content .)


state 37

    (14) block_title -> TITLE param LBRACKETS content RBRACKETS .

    CODE            reduce using rule 14 (block_title -> TITLE param LBRACKETS content RBRACKETS .)
    TITLE           reduce using rule 14 (block_title -> TITLE param LBRACKETS content RBRACKETS .)
    LIST            reduce using rule 14 (block_title -> TITLE param LBRACKETS content RBRACKETS .)
    $end            reduce using rule 14 (block_title -> TITLE param LBRACKETS content RBRACKETS .)

